fix alignment of logo

--- a/src/App/components/PageHeader/PageHeader.module.css
+++ b/src/App/components/PageHeader/PageHeader.module.css
@@ -83,6 +83,7 @@
     flex-direction: row;
     align-items: center;
     gap: var(--gap, 1rem);
+    margin-left: 2rem;
 }
 
 
